--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
   background-image: url("https://images.pexels.com/photos/4124939/pexels-photo-4124939.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .container {
   width: 70%;
